# todo_rust_react_chakra_ui_example

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .dockerignore  Dockerfile  package-lock.json
frontend/src/: App.js
